--- a/Advanced-Flask-Lab/templates/index.html
+++ b/Advanced-Flask-Lab/templates/index.html
@@ -13,12 +13,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="{{url_for('static',filename='images/avatar.jpg')}}" alt="" /></span>
+						<span class="avatar"><img src={{image}} alt="" /></span>
 
-            <h1>Description</h1>
+            <h1>{{bio}}</h1>
             <br>
             <!-- About me button -->
-            <a href="#"><button style="color:white;width:40%" >More about me</button></a>
+            <a href="{{url_for('about')}}"><button style="color:white;width:40%" >More about me</button></a>
             <!--  -->
             <br> <br>
 						<ul class="icons">
@@ -35,24 +35,16 @@
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
-                
+                 
+
+                {%for key in posts%}
                 <div>
                       <a href="">
-                        <img src="static/images/thumbs/01.jpg" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src={{key}} alt="" />
+                        <h3>{{posts[key]}}</h3>
                       </a>
-                
-                      <a href="">
-                        <img src="url_for('static',filename='images/thumbs/02.jpg')" alt="" />
-                        <h3>Caption... blah blah blah</h3>
-                      </a>
-                </div>    
-                <div>
-                  <a href="">
-                        <img src="{{url_for('static',filename='images/thumbs/03.jpg')}}" alt="" />
-                        <h3>Caption... blah blah blah</h3>
-                      </a>
-                </div>  
+                </div>
+                {%endfor%}
 
 							</section>
 
